添加下拉ListView执行创建新任务操作
Signed-off-by: Dream_Fly <380774082@qq.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name="com.dreamfly.timeschedule.maininterface.MainInterface"
             android:theme="@android:style/Theme.Light.NoTitleBar"
             android:windowSoftInputMode="stateHidden"/>
+         <activity
+             android:name="com.dreamfly.timeschedule.maininterface.AddTask"
+             android:theme="@android:style/Theme.Light.NoTitleBar"/>
     </application>
 
 </manifest>
