--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', 'src/main/java-gen']
+        }
+    }
 }
 
 dependencies {
     compile 'com.android.support:support-v4:21.0.3'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
