--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'de.greenrobot:eventbus:2.4.1'
 }
