--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,24 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+        android:theme="@android:style/Theme.Light.NoTitleBar"
         android:name=".TSApplication">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.UIMainListActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar"
             android:windowSoftInputMode="stateHidden"/>
-         <activity
-             android:name=".activity.UIAddTaskActivity"
-             android:theme="@android:style/Theme.Light.NoTitleBar"/>
+        <activity
+            android:name=".activity.UIAddTaskActivity"/>
+        <activity
+            android:name=".activity.TimePickerActivity"/>
     </application>
 
 </manifest>
