--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:name=".TSApplication">
         <activity
             android:name=".activity.MainActivity"
@@ -25,6 +25,9 @@
         </activity>
         <activity
             android:name=".activity.UIMainListActivity"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".activity.UIMainRecyActivity"
             android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activity.UIAddTaskActivity"/>
