[feature]Implement RecyclerView pulltorefresh function.
[what]实现RecyclerView的下拉刷新功能。
[why]下拉时候进行创建新的任务，若已经有任务则直接添加进去。
[how]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
             android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activity.UIMainRecyActivity"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden|adjustPan"
+            />
         <activity
             android:name=".activity.UIAddTaskActivity"/>
         <activity
