[feature]优化添加任务界面的输入法弹出以及隐藏。
[what]
[why]
[how]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             android:windowSoftInputMode="stateHidden|adjustPan"
             />
         <activity
-            android:name=".activity.UIAddTaskActivity"/>
+            android:name=".activity.UIAddTaskActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
             android:name=".activity.TimePickerActivity"/>
 
