[feature]更新引导图，加入release正式的编译，初步加入广告AdManager类。
[what]备注：release编译用的秘钥是故意写错的，避免签名泄露
[why]
[how]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,31 @@ android {
         versionName rootProject.ext.versionName
     }
 
-    buildTypes {
+    signingConfigs {
+        debug {
+        }
+
         release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PWD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PWD
+        }
+    }
+
+    buildTypes {
+        debug {
             minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
+            signingConfig signingConfigs.debug
+        }
+
+        release {
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
