[bugfix]解决导入阿里百川反馈sdk后，打开app会挂掉。
[how]需要放到libs下面。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
             zipAlignEnabled false
             shrinkResources false
             signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.release
         }
 
         release {
@@ -62,7 +63,7 @@ android {
 
 repositories {
     flatDir {
-        dirs 'libs/ali'
+        dirs 'libs'
     }
 }
 
